<resources>
    <string name="app_name">The Arokaya</string>
    <string name="menu_1">วิเคราะห์ธาตุเจ้าเรือน</string>
    <string name="menu_2">ธาตุสมุฏฐาน</string>
    <string name="menu_3">อาหาร &amp; สมุนไพร</string>
    <string name="menu_4">โรคในแต่ละช่วงอายุ</string>
    <string name="menu_5">โรงพยาบาลการแพทย์แผนไทย</string>
    <string name="menu_6">ร้านขายยาสมุนไพร</string>
    <string name="menu_7">ปรึกษาปัญหาสุขภาพ</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_check_elemental">วิเคราะห์ธาตุเจ้าเรือน</string>
    <string name="element_1">ธาตุดิน</string>
    <string name="element_2">ธาตุน้ำ</string>
    <string name="element_3">ธาตุลม</string>
    <string name="element_4">ธาตุไฟ</string>
    <string name="bt_check">วิเคราะห์ธาตุเจ้าเรือน</string>
    <string name="txt">"     ตามหลักทฤษฎีการแพทย์แผนไทยกล่าวว่า คนเราเกิดมาในร่างกายประกอบด้วยธาตุทั้งสี่ คือ ธาตุดิน ธาตุน้ำ ธาตุลม และธาตุไฟ ซึ่งแต่ละบุคคลจะมีธาตุเด่นเป็นธาตุประจำตัว เรียกว่า “ธาตุเจ้าเรือน”\n\n     ธาตุเจ้าเรือน หมายถึง องค์ประกอบของธาตุทั้ง 4 ที่รวมกันอย่างปกติ แต่จะมีธาตุอย่างใดอย่างหนึ่งเด่น หรือมากกว่าธาตุอื่น ๆ ซึ่งจะเป็นบุคลิกลักษณะ และอุปนิสัยที่ติดตัวมาตั้งแต่แรกเกิด หรืออาจเรียกอีกอย่างหนึ่งว่า “ธาตุกำเนิด” ซึ่งภายหลังธาตุนี้อาจเปลี่ยนแปลงได้ เนื่องจากพฤติกรรมการเลี้ยงดูและสิ่งแวดล้อม\n\n     การวิเคราะห์ธาตุเจ้าเรือนของแต่ละบุคคลสามารถวิเคราะห์ได้ 2 วิธี คือ 1) วิเคราะห์จาก วัน เดือน ปี เกิดแบบไทย โดยใช้แผ่นวงกลมวิเคราะห์ธาตุเจ้าเรือน และ 2) วิเคราะห์จากเดือนเกิด โดยคุณสามารถทำการวิเคราะห์ธาตุเจ้าเรือนประจำตัวด้วยการกดปุ่มวิเคราะห์ธาตุเจ้าเรือน เพื่อเลือกเดือนเกิดของท่านได้ด้านล่างนี้"</string>
    <string name="info_earth">"\n     ธาตุดิน มักเจ็บป่วยเป็นโรคที่เกี่ยวข้องกับอวัยวะต่าง ๆ ของร่างกาย โดยมีสิ่งที่ควบคุมความเจ็บป่วยของธาตุดิน 3 ประการด้วยกัน คือ\n\n•\t ประการที่ 1 หทัย (หัวใจ) หมายถึง ความสมบูรณ์ของหัวใจ การทำงาน การเต้น ความสมบูรณ์ของกล้ามเนื้อหัวใจ เป็นต้น โรคที่เกิดขึ้น มักเกิดจากการทำงานของหัวใจ\n\n•\t ประการที่ 2 อุทริยะ (อาหารใหม่) หมายถึง อาหารที่รับประทานเข้าไปใหม่ หรือเพิ่งจะรับประทานมา คือ ธาตุภายนอก ที่นำเข้าไปปรับธาตุภายใน การกินไม่ถูกกับธาตุ จะเจ็บป่วยได้ การกินไม่ถูกกับโรค อาการจะแย่ลง อาหารสมุนไพรจะถูกนำมาแก้ไขการเสียสมดุลนี้ได้\n\n•\t ประการที่ 3 กรีสะ (อาหารเก่า) หมายถึง กากอาหารในลำไส้ใหญ่ที่ออกมาเป็นอุจจาระ ลักษณะหรือกลิ่นของอุจจาระเป็นตัวบ่งบอกถึงสุขภาพ ลักษณะอุจจาระที่หยาบหรือละเอียด แข็งหรือเหลว หากกลิ่นอุจจาระเหมือนปลาเน่า ธาตุน้ำเป็นเหตุ กลิ่นเหมือนหญ้าเน่า ธาตุไฟเป็นเหตุ กลิ่นเหมือนข้าวบูด ธาตุลมเป็นเหตุ กลิ่นเหมือนซากศพ ธาตุดินเป็นเหตุ เป็นต้น\n\n     ผู้ที่มีธาตุดินเป็นธาตุเจ้าเรือน จะมีรูปร่างสูงใหญ่ ผิวค่อนข้างคล้ำ ผมดกดำ เสียงดังฟังชัด ข้อกระดูกแข็งแรง กระดูกใหญ่ น้ำหนักตัวมาก ล่ำสัน อวัยวะสมบูรณ์\n"</string>
    <string name="info_water">"\n     ธาตุน้ำ มักจะเจ็บป่วยด้วยของเหลว หรือน้ำภายในร่างกาย โดยมีสิ่งที่ควบคุมความเจ็บป่วยของธาตุน้ำ 3 ประการด้วยกัน คือ\n\n•\t ประการที่ 1 ศอเสมหะ หมายถึง เสมหะหรือเสลดที่อยู่บริเวณลำคอ โรคที่เกิดมักจะเกี่ยวกับระบบทางเดินหายใจส่วนบน เมือกในจมูก ลำคอ หลอดลมตอนต้น เช่น มีเสมหะ ไซนัส และไข้หวัด เป็นต้น\n\n•\t ประการที่ 2 อุระเสมหะ หมายถึง เสมหะหรือเสลดที่อยู่บริเวณทรวงอก และช่องท้องส่วนบน ได้แก่ เสมหะ น้ำย่อยในกระเพาะอาหาร โรคที่เกิดมักเกี่ยวกับทรวงอก และปอด เช่น หอบหืด หลอดลมอักเสบ ปอดบวม โรคกระเพาะ เป็นต้น\n\n•\t ประการที่ 3 คูถเสมหะ หมายถึง ของเหลวที่อยู่ในช่องท้องส่วนล่าง หรือระบบขับถ่ายอุจจาระ ปัสสาวะ โรคที่เกิดมักเกี่ยวข้องกับระบบทางเดินอาหารส่วนปลาย เมือกมูกในลำไส้ น้ำในกระเพาะปัสสาวะ อาทิเช่น ท้องเสีย บิดมูกเลือด ริดสีดวงทวาร กระเพาะปัสสาวะอักเสบ ปัสสาวะผิดปกติ เป็นต้น\n\n     ผู้ที่มีธาตุน้ำเป็นธาตุเจ้าเรือน จะมีรูปร่างสมบูรณ์สมสัดส่วน อวัยวะสดใสเต่งตึง ตาหวาน มีน้ำในตามาก ท่าเดินมั่นคง ผมดกดำงาม ทนเย็นได้ดี เสียงโปร่ง ความรู้สึกทางเพศดี มักเฉื่อยชา ค่อนข้างเกียจคร้าน\n"</string>
    <string name="info_wind">"\n     ธาตุลม มักจะเจ็บป่วยด้วยระบบการไหลเวียนโลหิตและระบบประสาท โดยมีสิ่งที่ควบคุมความเจ็บป่วยของธาตุลม 3 ประการด้วยกัน คือ\n\n•\t ประการที่ 1 หทัยวาต หมายถึง ภาวะจิตใจ โรคที่มักเกิดจากการเปลี่ยนแปลงของสภาพจิตใจ อารมณ์ ความหวั่นไหว ความกังวล ทำให้เกิดการแปรปรวนด้านอารมณ์\n\n•\t ประการที่ 2 สัตถกวาต หมายถึง ลมในร่างกายที่แหลมคมเหมือนศัสตราวุธ ซึ่งเกี่ยวกับระบบประสาทต่าง ๆ และเส้นเลือดฝอย ภาวะหัวใจขาดเลือด โรคที่มักจะเกี่ยวกับเส้นเลือดฝอยแตก ตีบตัน หรือเป็นอัมพาต อาการปวด อาการชา เป็นต้น\n\n•\t ประการที่ 3 สุมนาวาต หมายถึง การไหลเวียนโลหิตและระบบการทำงานของประสาท สมอง ไขสันหลัง โรคที่มักเกี่ยวกับการเจ็บหลัง การชัก การกระตุก ความดันโลหิต ลมจากหัวใจ และหลอดเลือดใหญ่กลางลำตัว\n\n     ผู้ที่มีธาตุลมเป็นธาตุเจ้าเรือน จะมีผิวหยาบแห้ง รูปร่างโปร่ง ผอม ผมบาง ข้อกระดูกลั่นเมื่อเคลื่อนไหว ขี้อิจฉา ขี้ขลาด รักง่ายหน่ายเร็ว ทนหนาวไม่ค่อยได้ นอนไม่ค่อยหลับ ช่างพูด เสียงต่ำ ออกเสียงไม่ค่อยชัด มีความรู้สึกทางเพศไม่ค่อยดี\n"</string>
    <string name="info_fire">"\n     ธาตุไฟ มักเจ็บป่วยด้วยโรคที่เกิดจากกระบวนการเผาผลาญพลังงานในร่างกาย โดยมีสิ่งที่ควบคุมความเจ็บป่วยของธาตุไฟ 3 ประการ คือ\n\n•\t ประการที่ 1 พัทธปิตตะ หมายถึง กระบวนการผลิตน้ำดีของตับ โรคที่เกิดมักเกี่ยวกับระบบน้ำดี ภายในถุงน้ำดี ท่อน้ำดีอุดตัน ภาวการณ์ผลิตน้ำดีของตับผิดปกติ ตับอักเสบ เกิดอาการตัวเหลือง ตาเหลือง เกิดน้ำดีอักเสบ เป็นนิ่ว เป็นต้น\n\n•\t ประการที่ 2 อพัทธปิตตะ หมายถึง กระบวนการย่อยอาหารโดยน้ำดี หรือน้ำดีในลำไส้ระบบการย่อยอาหาร อาการ คือ จุกเสียด ท้องอืดท้องเฟ้อ อาหารไม่ย่อย เป็นดีซ่าน เหลืองทั้งตัว ถ่ายเป็นสีเขียว เป็นต้น\n\n•\t ประการที่ 3 กำเดา หมายถึง ความร้อนที่เกิดจากกระบวนการเผาผลาญ การทำงานของร่างกาย โรคที่เกิดมักเกี่ยวกับอาการตัวร้อน เป็นไข้ ร้อนใน ติดเชื้อ อักเสบ เป็นต้น\n\n     ผู้ที่มีธาตุไฟเป็นธาตุเจ้าเรือน มักขี้ร้อน ทนร้อนไม่ค่อยได้ หิวบ่อย กินเก่ง ผมหงอกเร็ว มักหัวล้าน หนังย่น ผม ขน หนวดอ่อนนิ่ม ไม่ค่อยอดทน ใจร้อน ข้อกระดูกหลวม มีกลิ่นปาก กลิ่นตัวแรง ความต้องการทางเพศปานกลาง\n"</string>
    <string name="btn_basic">คุณลักษณะของธาตุสมุฏฐาน</string>
    <string name="lbd_1">ปถวีธาตุ</string>
    <string name="lbd_2">อาโปธาตุ</string>
    <string name="lbd_3">วาโยธาตุ</string>
    <string name="lbd_4">เตโชธาตุ</string>
    <string name="info_basic">"     ธาตุสมุฏฐาน เป็นความเจ็บป่วยที่มีเหตุมาจากการแปรปรวนของธาตุ มี 3 ลักษณะ คือ\n\n     1. กำเริบ หมายถึง การเพิ่มขึ้นของคุณลักษณะแห่งธาตุนั้น\n     2. หย่อน หมายถึง การลดลงของคุณลักษณะแห่งธาตุนั้น\n     3. พิการ หมายถึง การเปลี่ยนแปลงผิดปกติไปจากธรรมดาของธาตุนั้น\n\n     ภาวะที่ธาตุในร่างกายกำเริบ หย่อน พิการ ในแต่ละธาตุนี้ จะทำให้เกิดความเจ็บป่วยขึ้นในร่างกายแตกต่างกันออกไปตามแต่ธาตุเจ้าเรือนประจำตัวของแต่ละบุคคล"</string>
    <string name="info_1">"     ปถวีสมุฏฐาน (ธาตุดิน) มีธาตุดินเป็นที่ตั้ง จำแนกส่วนประกอบได้ 20 อย่าง โดยธาตุดินเป็นธาตุที่ประกอบขึ้นเป็นโครงสร้างหลักของร่างกาย มีลักษณะเป็นของแข็ง มีความคงรูป เช่น อวัยวะภายในและภายนอก ผม เล็บ เป็นต้น"</string>
    <string name="info_2">"     อาโปสมุฏฐาน (ธาตุน้ำ) มีธาตุน้ำเป็นที่ตั้ง จำแนกส่วนประกอบได้ 12 อย่าง โดยธาตุน้ำเป็นส่วนประกอบของร่างกายที่มีลักษณะเป็นของเหลวและมีลักษณะไหลไปมาได้ เช่น น้ำเลือด น้ำลาย น้ำดี น้ำมูก น้ำไขข้อ เป็นต้น"</string>
    <string name="info_3">"     วาโยสมุฏฐาน (ธาตุลม) มีธาตุลมเป็นที่ตั้ง จำแนกส่วนประกอบได้ 6 อย่าง โดยธาตุลมเป็นส่วนประกอบที่ทำให้ธาตุต่าง ๆ ของร่างกายเกิดการเคลื่อนไหวไปในตำแหน่งอื่น ทำให้มีการยืน เดิน นั่ง นอนได้"</string>
    <string name="info_4">"     เตโชสมุฏฐาน (ธาตุไฟ) มีธาตุไฟเป็นที่ตั้ง จำแนกเป็นส่วนประกอบได้ 4 อย่าง โดยธาตุไฟเป็นส่วนประกอบของร่างกายที่เป็นพลังงานความร้อนหรือพลังงานที่ทำให้เกิดการย่อยสลาย และทำให้ธาตุดิน ธาตุน้ำ ธาตุลมเกิดการเปลี่ยนแปลงได้"</string>
    <string name="early">ปฐมวัย</string>
    <string name="middle">มัชฌิมวัย</string>
    <string name="end">ปัจฉิมวัย</string>
    <string name="info_early">"     ปฐมวัย (วัยเด็ก) มีอายุตั้งแต่แรกเกิดถึงอายุ 16 ปี มีเสมหะเป็นเจ้าเรือน ในช่วงนี้ถ้าเกิดเป็นโรคขึ้นเป็นอายุแห่งเสมหะ โรคที่เกิดมีกำลัง 12 องศา (วัน) ผู้ใดเป็นโรคอยู่ในระหว่างเสมหะสมุฎฐาน ให้ตั้งเสมหะเป็นต้น วาตะเป็นที่สุด"</string>
    <string name="info_middle">"     มัชฌิมวัย (วัยกลางคน) มีอายุตั้งแต่ 16 ปี ถึง 30 ปี มีปิตตะเป็นเจ้าเรือน ในช่วงนี้ถ้าเกิดเป็นโรคขึ้นเป็นอายุแห่งปิตตะ โรคที่เกิดมีกำลัง 7 องศา (วัน) ผู้ใดเป็นโรคอยู่ในระหว่างปิตตะสมุฎฐาน ให้ตั้งปิตตะเป็นต้น เสมหะเป็นที่สุด"</string>
    <string name="info_end">"     ปัจฉิมวัย (วัยชรา) มีอายุตั้งแต่ 30 ปีขึ้นไปจนถึงอายุขัย มีวาตะเป็นเจ้าเรือน ในช่วงนี้ถ้าเกิดเป็นโรคขึ้นเป็นอายุแห่งวาตะ โรคที่เกิดมีกำลัง 10 องศา (วัน) ผู้ใดเป็นโรคอยู่ในระหว่างวาตะสมุฎฐาน ให้ตั้งวาตะเป็นต้น ปิตตะเป็นที่สุด"</string>
    <string name="summer">การรักษาสุขภาพในคิมหันตฤดู (ฤดูร้อน)</string>
    <string name="rainy">การรักษาสุขภาพในวสันตฤดู (ฤดูฝน)</string>
    <string name="snow">การรักษาสุขภาพในเหมันตฤดู (ฤดูหนาว)</string>
    <string name="summer_1">"     สมุฏฐานเสมหะ ควรให้อาหารรสเย็น เปรี้ยว ขม หวาน แต่ไม่ควรรับประทานอาหารรสเย็นจัดเกินไป เนื่องจากอาหารรสเย็นจะทำให้เสมหะกำเริบ ถ้าเด็กมีเสมหะกำเริบ ควรให้ยาหรืออาหารรสเผ็ดหอมร้อนได้เป็นบางครั้ง อาหารรสเปรี้ยวก็ทำให้เกิดความร้อนได้เช่นกัน จึงไม่ควรรับประทานมากเกินไป บางครั้งอาจทำให้เกิดอาการท้องเสียได้"</string>
    <string name="rainy_1">"     สมุฏฐานเสมหะ ควรให้อาหารรสเผ็ดร้อน เปรี้ยว ขม หวาน และควรหลีกเลี่ยงอาหารที่มีรสมัน มีแป้งมาก หรืออาหารที่ย่อยยาก สำหรับอาหารรสหวานนั้น ถ้ามากเกินไปก็ทำให้เกิดลมได้ จึงควรให้พอประมาณ"</string>
    <string name="snow_1">"     สมุฏฐานเสมหะ ควรใช้อาหารรสสุขุม จืด เปรี้ยว ขม หวาน ทั้งนี้ อาหารรสหวานควรให้ลดน้อยลง ถ้ามีเสมหะกำเริบอยู่ด้วย ควรงดไว้ก่อน สำหรับอาหารรสเผ็ดหอมร้อน อาจให้บ้างเล็กน้อยในตอนเช้าและมื้อเย็น\n\n"</string>
    <string name="summer_2">"     สมุฏฐานปิตตะ ควรให้อาหารรสเย็น ขม เปรี้ยว ฝาด เค็ม ไม่ควรให้อาหารหรือยาที่มีรสเผ็ดหอมร้อนในเวลากลางวัน เว้นแต่ในคนที่มีธาตุเย็น อาหารรสเปรี้ยวก็ทำให้เกิดความร้อนได้เช่นกัน ไม่ควรรับประทานมากเกินไป บางครั้งอาจทำให้เกิดอาการท้องเสียได้"</string>
    <string name="rainy_2">"     สมุฏฐานปิตตะ ควรให้อาหารรสเผ็ดร้อน ขม เปรี้ยว ฝาด เค็ม ทั้งนี้ในวัยกลางคนเป็นวัยที่มีความร้อนสูง การใช้อาหารรสเผ็ดร้อน จึงไม่เหมาะสำหรับมื้อกลางวัน ในฤดูฝนอาจให้ในมื้อเช้าและในมื้อเย็น"</string>
    <string name="snow_2">"     สมุฏฐานปิตตะ ควรใช้อาหารรสสุขุม จืด ขม เปรี้ยว ฝาด เค็ม\n\n"</string>
    <string name="summer_3">"     สมุฏฐานวาตะ ควรให้อาหารรสหอมเย็น ขม เค็ม ทั้งนี้ อาหารหรือยารสเย็น รสฝาด รสจืด อาหารย่อยยาก อาหารที่มีแป้งมาก ควรให้ในเวลากลางวัน ไม่ควรให้ในมื้อเย็นหรือกลางคืน เนื่องจากปัจฉิมวัยไฟธาตุหย่อนระบบการย่อยอาหารไม่ดี อาจทำให้ลมกำเริบในตอนดึก  ในตอนเย็นควรให้อาหารหรือยาที่มีรสเผ็ดหอมร้อนหรือสุขุม แต่ไม่ควรมีรสเผ็ดร้อนมากเกินไป ซึ่งอาจทำให้ธาตุพิการได้อีก"</string>
    <string name="rainy_3">"     สมุฏฐานวาตะ ควรให้อาหารรสเผ็ดร้อน หอมเย็น ขม เค็ม ฝาด ทั้งนี้ในผู้สูงอายุ อาหารหลักเกือบทุกมื้อในหน้าฝน ควรมีรสเผ็ด หอมร้อน ขม ร่วมด้วยเสมอ เพื่อช่วยการย่อยอาหารและการขับถ่าย ในมื้อเย็นไม่ควรให้อาหารพวกแป้งและไขมัน อาหารย่อยยาก อาหารที่มีรสเย็น หรือผลไม้บางชนิด เช่น กล้วยหอม ทุเรียน มะม่วง เป็นต้น และอาหารรสหอมร้อน เช่น ขิง ข่า ตะไคร้ ใบกะเพรา ฯลฯ เป็นอาหารจำเป็นสำหรับผู้สูงอายุในมื้อเย็น เพื่อช่วยย่อยอาหาร ขับลม บำรุงธาตุ และทำให้เลือดลมเดินสะดวก"</string>
    <string name="enter_text_to_search">ป้อนข้อความเพื่อค้นหา</string>
    <string name="search_via">ค้นหาจาก</string>
    <string name="filter_by">กรองการค้นหา</string>
    <string name="contains">ประกอบด้วย</string>
    <string name="starts_with">ขึ้นต้นด้วย</string>
    <string name="element">ธาตุเจ้าเรือน</string>
    <string name="food">เมนูอาหาร</string>
    <string name="herb">สมุนไพร</string>
    <string name="action_map1">ภูมิประเทศ</string>
    <string name="action_map2">ดาวเทียม</string>
    <string name="action_map3">ผสม</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">E-mail</string>
    <string name="sign_in">Sign In</string>
</resources>