<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/search_via_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/up_dropdown"
        android:padding="5dp"
        android:text="@string/search_via"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!--  Search Via Radio Group  -->
    <RadioGroup
        android:id="@+id/search_via_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/name_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="@font/psu"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/element"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/number_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/psu"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/food"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/email_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/psu"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/herb"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/filter_by_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/up_dropdown"
        android:padding="5dp"
        android:text="@string/filter_by"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!--  Filter By Radio Group  -->
    <RadioGroup
        android:id="@+id/filter_type_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/query_contains_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="@font/psu"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/contains"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/query_starts_With_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/psu"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/starts_with"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </RadioGroup>

    <!--  EditText for User Input -->
    <EditText
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/search_bg"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:fontFamily="@font/psu"
        android:gravity="center_vertical"
        android:hint="@string/enter_text_to_search"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp" />
</LinearLayout>